# CoSLAM_for_Target_Following

./: CMakeLists.txt  index.html  manifest.xml  params.json  test_ar.launch
msg/: features.msg
src/: feature_receiver.cpp  script.txt  video_receiver.cpp
src/app/: APP_OfflineMain.cpp  APP_OfflineMain_Reloc.cpp  APP_ROSMain.cpp  APP_ROSMain_features.cpp  APP_USBCamMain.cpp  SL_CoSLAM.cpp  SL_CoSLAM.h  SL_GlobParam.cpp  SL_GlobParam.h  SL_InitMap.cpp  SL_InitMap.h  SL_InterCamPoseEstimator.cpp  SL_MergeCameraGroup.cpp  SL_NewMapPointsInterCam.cpp  SL_NewMapPointsInterCam.h  SL_Relocalization.cpp  SL_Relocalization.h  SL_SingleSLAM.cpp  SL_SingleSLAM.h
src/coslam_gs/msg/: __init__.py  _features.py
src/gui/: CoSLAMThread.cpp  CoSLAMThread.h  GLImagePane.cpp  GLImagePane.h  GLImageWnd.h  GLScenePane.cpp  GLScenePane.h  GLScenePaneHelper.cpp  GLSceneWnd.h  MainDialog.cpp  MainDialog.h  MyApp.cpp  MyApp.h
src/redis/: PosVelKF.cpp  PosVelKF.h  cbredisclient.cpp  cbredisclient.h
src/slam/: SL_Camera.cpp  SL_Camera.h  SL_CoSLAMHelper.cpp  SL_CoSLAMHelper.h  SL_FeaturePoint.cpp  SL_FeaturePoint.h  SL_FeaturePoints.cpp  SL_FeaturePoints.h  SL_InitMapHelper.cpp  SL_KeyPoseList.cpp  SL_KeyPoseList.h  SL_MapPoint.cpp  SL_NCCBlock.cpp  SL_NCCBlock.h
src/tracking/: BriefExtractor.cpp  BriefExtractor.h  CVKLTTracker.cpp  CVKLTTracker.h  CoSL_BaseKLTTracker.h  CoSL_FeatureTracker.cpp  CoSL_FeatureTracker.h  GPUKLT.cpp  GPUKLT.h  SL_Track2D.h
src/tracking/CGKLT/: v3d_gpubase.cpp  v3d_gpuklt.h
src/videoReader/: VR_AVIReader.cpp  VR_AVIReader.h  VR_ROSReader.cpp  VR_ROSReader.h  VR_USBCamReader.cpp  VR_USBCamReader.h  VR_VideoReader.h
